chore: finalize worker setup and background processing flow

--- a/Pulse.Worker/appsettings.json
+++ b/Pulse.Worker/appsettings.json
@@ -1,6 +1,8 @@
 {
     "Worker": {
+        "EnableDemoProducer": true,
         "ProducerIntervalSeconds": 5
+
     },
     "Email": {
         "From": "noreply@pulse.local",
